Menu interface e JS

--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -126,3 +126,220 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+html,
+body {
+  min-height: 100% !important;
+  height: 100%;
+  background-color: #1a1a1a;
+  color: #fff;
+  font-family: Verdana, Geneva, sans-serif;
+}
+/**
+ * mobile
+ * @description mobile landscape breakpoint 480px
+ */
+/**
+ * tablet
+ * @description tablet breakpoint 768px
+ */
+/**
+ * tablet
+ * @description tablet breakpoint 992px
+ */
+/**
+ * tablet
+ * @description tablet breakpoint 1200px
+ */
+/**
+ * box-sizing
+ * @description the box-sizing property
+ */
+/**
+ * clearfix
+ * @description the box-sizing property
+ */
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/**
+ * btn
+ * @description the box-sizing property
+ */
+#hamburguer {
+  display: block;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 10;
+  padding: 20px;
+}
+.menu-principal {
+  width: 100%;
+  height: 100%;
+  background-color: #1a1a1a;
+  display: none;
+}
+.menu-principal.toggleMenu {
+  display: block;
+}
+@media (min-width: 48em) {
+  .menu-principal {
+    display: block;
+    position: fixed;
+    z-index: 1;
+    height: 100px;
+    background-color: #fff;
+    border-bottom: 2px #1a1a1a;
+  }
+}
+.menu-principal nav {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  max-width: 1200px;
+  height: 100%;
+  padding: 10px;
+  margin: 0 auto;
+  position: relative;
+}
+.menu-principal nav:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.menu-principal nav > header {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  text-align: center;
+}
+@media (min-width: 48em) {
+  .menu-principal nav > header {
+    width: 100px;
+    float: left;
+    border-bottom: none;
+  }
+}
+.menu-principal nav > header > a {
+  display: block;
+  height: 100%;
+}
+@media (min-width: 48em) {
+  .menu-principal nav > header > a.logoAlternativo {
+    display: none;
+  }
+}
+.menu-principal nav > header > a.logo {
+  display: none;
+}
+@media (min-width: 48em) {
+  .menu-principal nav > header > a.logo {
+    display: block;
+  }
+}
+.menu-principal nav > header > a > img {
+  height: inherit;
+}
+.menu-principal nav > ul {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.menu-principal nav > ul:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+@media (min-width: 48em) {
+  .menu-principal nav > ul {
+    width: 70%;
+    padding-top: 0;
+    padding-bottom: 0;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: -webkit-translate(-50%, -50%);
+    transform: -moz-translate(-50%, -50%);
+    transform: -o-translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+}
+@media (min-width: 48em) {
+  .menu-principal nav > ul li {
+    display: inline-block;
+  }
+}
+.menu-principal nav > ul li a {
+  display: block;
+  height: 40px;
+  line-height: 40px;
+  color: #fff;
+  font-size: 18px;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+}
+@media (min-width: 48em) {
+  .menu-principal nav > ul li a {
+    font-size: 14px;
+    color: #1a1a1a;
+    padding: 0 10px;
+  }
+}
+@media (min-width: 62em) {
+  .menu-principal nav > ul li a {
+    font-size: 16px;
+  }
+}
+@media (min-width: 75em) {
+  .menu-principal nav > ul li a {
+    font-size: 18px;
+  }
+}
+.menu-principal nav > aside:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+@media (min-width: 48em) {
+  .menu-principal nav > aside {
+    width: 40px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
+.menu-principal nav > aside ul:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+@media (min-width: 48em) {
+  .menu-principal nav > aside ul {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: -webkit-translateY(-50%);
+    transform: -moz-translateY(-50%);
+    transform: -o-translateY(-50%);
+    transform: translateY(-50%);
+  }
+}
+.menu-principal nav > aside ul li a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  margin: 0 auto;
+}
+.menu-principal nav > aside ul li a.facebook {
+  color: red;
+}
