--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -1,1 +1,5 @@
 @import "./../../vendor/eric-mayer-reset-less-sass/reset.less";
+@import "_estrutura.less";
+@import "_colors.less";
+@import "_mixins.less";
+@import "_menu-principal.less";
