--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -1,5 +1,6 @@
 @import "./../../vendor/eric-mayer-reset-less-sass/reset.less";
 @import "_estrutura.less";
 @import "_colors.less";
+@import "_icons.less";
 @import "_mixins.less";
 @import "_menu-principal.less";
