--- a/dev/less/_menu-principal.less
+++ b/dev/less/_menu-principal.less
@@ -1,10 +1,16 @@
 #hamburguer {
+	.icon(@icon-hamburguer, 40px);
 	display: block;
 	position: fixed;
 	top: 0;
 	right: 0;
 	z-index: 10;
-	padding: 20px;
+	padding: 10px 20px;
+	font-size: 40px;
+
+	.tablet({
+		display: none;
+	});
 }
 
 .menu-principal {
@@ -126,7 +132,7 @@
 				height: 100%;
 				position: absolute;
 				top: 0;
-				right: 0;
+				right: 20px;
 			});
 
 			ul {
@@ -145,14 +151,18 @@
 				li {
 					a {
 						display: block;
-						width: 40px;
-						height: 40px;
-						line-height: 40px;
 						text-align: center;
 						margin: 0 auto;
+						color: #fff;
+						border: none;
+						text-decoration: none;
+
+						.tablet({
+							color: @cor-principal;
+						});
 
 						&.facebook {
-							color: red;
+							.icon(@icon-facebook, 24px);
 						}
 					}
 				}
