--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -4,3 +4,5 @@
 @import "_icons.less";
 @import "_mixins.less";
 @import "_menu-principal.less";
+@import "_header-principal.less";
+@import "_banner-principal.less";
