--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -183,6 +183,7 @@ body {
   z-index: 10;
   padding: 10px 20px;
   font-size: 40px;
+  color: #1a1a1a;
 }
 #hamburguer::before {
   content: "\e908";
@@ -206,6 +207,9 @@ body {
     display: none;
   }
 }
+#hamburguer.toggleMenuMobile {
+  color: #fff;
+}
 .menu-principal-mobile {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -222,6 +226,9 @@ body {
     display: none;
   }
 }
+.menu-principal-mobile.toggleMenuMobile {
+  display: none;
+}
 .menu-principal-mobile > img {
   height: 100%;
 }
@@ -229,6 +236,10 @@ body {
   width: 100%;
   height: 100%;
   background-color: #1a1a1a;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
   display: none;
 }
 .menu-principal.toggleMenu {
@@ -267,8 +278,7 @@ body {
   box-sizing: border-box;
   width: 100%;
   height: 100px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  height: calc(100px - 20px);
   text-align: center;
 }
 @media (min-width: 48em) {
@@ -296,11 +306,13 @@ body {
   }
 }
 .menu-principal nav > header > a > img {
-  height: inherit;
+  height: 100%;
 }
 .menu-principal nav > ul {
+  margin-top: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 .menu-principal nav > ul:after {
   content: "";
