--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -151,11 +151,11 @@ body {
  * @description tablet breakpoint 768px
  */
 /**
- * tablet
+ * desktop
  * @description tablet breakpoint 992px
  */
 /**
- * tablet
+ * huge
  * @description tablet breakpoint 1200px
  */
 /**
@@ -215,7 +215,7 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
-  height: 100px;
+  height: 120px;
   padding: 10px;
   text-align: center;
   background-color: #fff;
@@ -252,7 +252,7 @@ body {
     top: 0;
     left: 0;
     z-index: 1;
-    height: 100px;
+    height: 120px;
     background-color: #fff;
     border-bottom: 2px #1a1a1a;
   }
@@ -277,8 +277,8 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
-  height: 100px;
-  height: calc(100px - 20px);
+  height: 120px;
+  height: calc(120px - 20px);
   text-align: center;
 }
 @media (min-width: 48em) {
@@ -460,6 +460,21 @@ body {
   text-align: center;
   line-height: 120%;
 }
+@media (min-width: 48em) {
+  .header-principal > h1 {
+    font-size: 18px;
+  }
+}
+@media (min-width: 62em) {
+  .header-principal > h1 {
+    font-size: 20px;
+  }
+}
+@media (min-width: 62em) {
+  .header-principal > h1 {
+    font-size: 24px;
+  }
+}
 .banner-principal {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -470,6 +485,6 @@ body {
 }
 @media (min-width: 48em) {
   .banner-principal {
-    margin-top: 100px;
+    margin-top: 120px;
   }
 }
