--- a/dev/less/_header-principal.less
+++ b/dev/less/_header-principal.less
@@ -13,5 +13,15 @@
 	> h1 {
 		text-align: center;
 		line-height: 120%;
+
+		.tablet({
+			font-size: 18px;
+		});
+		.desktop({
+			font-size: 20px;
+		});
+		.desktop({
+			font-size: 24px;
+		});
 	}
 }
