--- a/dev/less/_mixins.less
+++ b/dev/less/_mixins.less
@@ -17,7 +17,7 @@
   }
 }
 /**
- * tablet
+ * desktop
  * @description tablet breakpoint 992px
  */
 .desktop(@rules) {
@@ -26,7 +26,7 @@
   }
 }
 /**
- * tablet
+ * huge
  * @description tablet breakpoint 1200px
  */
 .huge(@rules) {
