--- a/dev/less/_header-principal.less
+++ b/dev/less/_header-principal.less
@@ -9,19 +9,22 @@
 		text-align: center;
 		opacity: .4;
 	}
-
 	> h1 {
 		text-align: center;
 		line-height: 120%;
 
-		.tablet({
-			font-size: 18px;
-		});
-		.desktop({
+		.mobile({
 			font-size: 20px;
+		});
+		.tablet({
+			font-size: 22px;
 		});
 		.desktop({
 			font-size: 24px;
+			padding: 20px;
+		});
+		.desktop({
+			font-size: 26px;
 		});
 	}
 }
