--- a/dev/less/_texto-home.less
+++ b/dev/less/_texto-home.less
@@ -8,7 +8,8 @@
 	});
 
 	> p {
-		max-width: 80%;
+		width: 90%;
+		max-width: 90%;
 		text-align: center;
 		line-height: 120%;
 		margin-top: 10px;
@@ -24,11 +25,9 @@
 			font-size: 20px;
 		});
 		.desktop({
-			font-size: 22px;
-			margin-top: 20px;
-		});
-		.huge({
-			font-size: 24px;
+			line-height: 150%;
+			width: 70%;
+			max-width: 70%;
 		});
 	}
 }
