--- a/dev/less/_icons.less
+++ b/dev/less/_icons.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'pousada-icons';
-    src: url('./../../assets/icons/pousada.eot?ifary1');
-    src: url('./../../assets/icons/pousada.eot?ifary1#iefix') format('embedded-opentype'),
-         url('./../../assets/icons/pousada.ttf?ifary1') format('truetype'),
-         url('./../../assets/icons/pousada.woff?ifary1') format('woff'),
-         url('./../../assets/icons/pousada.svg?ifary1#remoto-icons') format('svg');
+    src: url('./../../assets/icons/pousada.eot?5fvy3s');
+    src: url('./../../assets/icons/pousada.eot?5fvy3s#iefix') format('embedded-opentype'),
+         url('./../../assets/icons/pousada.ttf?5fvy3s') format('truetype'),
+         url('./../../assets/icons/pousada.woff?5fvy3s') format('woff'),
+         url('./../../assets/icons/pousada.svg?5fvy3s#remoto-icons') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -34,6 +34,9 @@
 @icon-waze: "\e914";
 @icon-whatsapp: "\e915";
 @icon-wifi: "\e916";
+@icon-home: "\e917";
+@icon-promocoes: "\e918";
+@icon-suites: "\e919";
 
 .icon-content(@content) {
   &::before {
