--- a/dev/less/_estrutura.less
+++ b/dev/less/_estrutura.less
@@ -9,3 +9,12 @@ body {
 strong {
 	font-weight: bold;
 }
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+textarea:focus,
+input:focus {
+    outline: none;
+}
