--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -7,3 +7,4 @@
 @import "_header-principal.less";
 @import "_banner-principal.less";
 @import "_texto-home.less";
+@import "_diferenciais-pousada.less";
