--- a/dev/less/_menu-principal.less
+++ b/dev/less/_menu-principal.less
@@ -5,9 +5,12 @@
 	top: 0;
 	right: 0;
 	z-index: 10;
-	padding: 10px 20px;
-	font-size: 40px;
+	padding: 5px 10px;
+	margin: 10px;
+	font-size: 30px;
+	border-radius: 5px;
 	color: @cor-principal;
+	background-color: rgba(255, 255, 255, .2);
 
 	.tablet({
 		display: none;
