--- a/dev/less/_diferenciais-pousada.less
+++ b/dev/less/_diferenciais-pousada.less
@@ -23,7 +23,7 @@
 	> .diferenciais {
 		border-radius: 5px;
 		padding: 20px;
-		background-color: rgba(0, 0, 0, .9);
+		background-color: @cor-principal;
 
 		.tablet({
 			padding: 40px;
