--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -146,6 +146,16 @@ textarea:focus,
 input:focus {
   outline: none;
 }
+.fake {
+  width: 100%;
+  height: 120px;
+  display: none;
+}
+@media (min-width: 48em) {
+  .fake {
+    display: block;
+  }
+}
 @font-face {
   font-family: 'pousada-icons';
   src: url('../../assets/icons/pousada.eot?5fvy3s');
@@ -591,19 +601,6 @@ input:focus {
 @media (min-width: 62em) {
   .header-principal > h1 {
     font-size: 26px;
-  }
-}
-.banner-principal {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  background-image: url(../../assets/images/loader.gif);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-@media (min-width: 48em) {
-  .banner-principal {
-    margin-top: 120px;
   }
 }
 .texto-home {
