--- a/dev/less/_estrutura.less
+++ b/dev/less/_estrutura.less
@@ -13,8 +13,16 @@ a {
 	color: inherit;
 	text-decoration: none;
 }
-
 textarea:focus,
 input:focus {
     outline: none;
+}
+.fake {
+	width: 100%;
+	height: 120px;
+	display: none;
+
+	.tablet({
+		display: block;
+	});
 }
