--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -8,3 +8,4 @@
 @import "_banner-principal.less";
 @import "_texto-home.less";
 @import "_diferenciais-pousada.less";
+@import "_rodape-principal.less";
