--- a/dev/less/_menu-principal.less
+++ b/dev/less/_menu-principal.less
@@ -183,6 +183,9 @@
 						&.localizacao {
 							.icon(@icon-map);
 						}
+						&.ativo {
+							color: @cor-logo;
+						}
 					}
 				}
 			}
