--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -8,4 +8,5 @@
 @import "_banner-principal.less";
 @import "_texto-home.less";
 @import "_diferenciais-pousada.less";
+@import "_suites-home.less";
 @import "_rodape-principal.less";
