Links para suites

--- a/dev/less/_menu-principal.less
+++ b/dev/less/_menu-principal.less
@@ -29,6 +29,7 @@
 	text-align: center;
 	background-color: #fff;
 	border-bottom: 2px @cor-principal;
+	overflow: hidden;
 
 	.tablet({
 		display: none;
