--- a/dev/less/_suites-home.less
+++ b/dev/less/_suites-home.less
@@ -133,11 +133,14 @@
 					float: left;
 					font-size: 14px;
 
-					.desktop({
+					.mobile({
 						font-size: 16px;
 					});
-					.huge({
+					.desktop({
 						font-size: 18px;
+					});
+					.huge({
+						font-size: 20px;
 					});
 				}
 				> .icone {
@@ -156,15 +159,9 @@
 					opacity: .3;
 
 					.desktop({
-						width: 18px;
-						height: 18px;
-						line-height: 18px;
-						font-size: 14px;
-					});
-					.huge({
-						width: 20px;
-						height: 20px;
-						line-height: 20px;
+						width: 22px;
+						height: 22px;
+						line-height: 22px;
 						font-size: 16px;
 					});
 				}
