--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -244,6 +244,7 @@ input:focus {
   text-align: center;
   background-color: #fff;
   border-bottom: 2px #1a1a1a;
+  overflow: hidden;
 }
 @media (min-width: 48em) {
   .menu-principal-mobile {
@@ -1016,14 +1017,19 @@ input:focus {
   float: left;
   font-size: 14px;
 }
-@media (min-width: 62em) {
+@media (min-width: 30em) {
   .suites-home > ul li a > .titulo {
     font-size: 16px;
   }
 }
-@media (min-width: 75em) {
+@media (min-width: 62em) {
   .suites-home > ul li a > .titulo {
     font-size: 18px;
+  }
+}
+@media (min-width: 75em) {
+  .suites-home > ul li a > .titulo {
+    font-size: 20px;
   }
 }
 .suites-home > ul li a > .icone {
@@ -1043,17 +1049,9 @@ input:focus {
 }
 @media (min-width: 62em) {
   .suites-home > ul li a > .icone {
-    width: 18px;
-    height: 18px;
-    line-height: 18px;
-    font-size: 14px;
-  }
-}
-@media (min-width: 75em) {
-  .suites-home > ul li a > .icone {
-    width: 20px;
-    height: 20px;
-    line-height: 20px;
+    width: 22px;
+    height: 22px;
+    line-height: 22px;
     font-size: 16px;
   }
 }
